Correccion de Redes Sociales y usuario

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <section>
         <div class="contenedor_social">
             <ul>
-                <a href="https://www.facebook.com/armandodevcom"><i class="bi bi-facebook"></i></a>
-                <a href="https://x.com/armandodevcom"><i class="bi bi-twitter-x"></i></a>
-                <a href="https://www.linkedin.com/in/armandodev/"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/ArmandoDevCom"><i class="bi bi-github"></i></a>
-                <a href="https://www.tiktok.com/@armandodevcom"><i class="bi bi-tiktok"></i></a>
-                <a href="https://www.instagram.com/armandodevcom"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/ardudev/"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/ardudev_"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/in/ardudev/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/ardu-dev"><i class="bi bi-github"></i></a>
+                <a href="https://www.tiktok.com/@ardudev"><i class="bi bi-tiktok"></i></a>
+                <a href="https://www.instagram.com/ardudev_/"><i class="bi bi-instagram"></i></a>
             </ul>
         </div>
     </section>
@@ -51,7 +51,7 @@
                   <p class="card-text">Landig de venta estática para negocio de sushi. Diseño simple y atractivo, con elementos clave para una experiencia de usuario fluida y agradable.</p>
                   <ul>
                     <a href="https://landingdeventahd.netlify.app/"><i class="bi bi-globe2"></i></a>
-                    <a href="https://github.com/ArmandoDevCom/Landing-de-Venta"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/ardu-dev/Landing-de-Venta"><i class="bi bi-github"></i></a>
                   </ul>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                   <p class="card-text">Aplicación básica para gestionar ideas y recordatorios mediante operaciones CRUD. Así nunca se te pasara.</p>
                   <ul>
                     <a href="https://crud-almacenamiento-de-ideas.netlify.app/"><i class="bi bi-globe2"></i></a>
-                    <a href="https://github.com/ArmandoDevCom/CRUD_almacenamiento-de-ideas"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/ardu-dev/CRUD_almacenamiento-de-ideas"><i class="bi bi-github"></i></a>
                   </ul>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                   <p class="card-text">Visualiza información en tiempo real sobre el mercado de criptomonedas con gráficos de pastel y barras.</p>
                   <ul>
                     <a href="https://tablero-crypto-datos.netlify.app/"><i class="bi bi-globe2"></i></a>
-                    <a href="https://github.com/ArmandoDevCom/Tablero_de_crypto_datos"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/ardu-dev/Tablero_de_crypto_datos"><i class="bi bi-github"></i></a>
                   </ul>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                   <p class="card-text">RestauranteApp: Aplicación web completa para restaurantes con reserva de mesas, menú y más. Desarrollada con React, Bootstrap y Firebase.</p>
                   <ul>
                     <a href="https://appweb-basic-restaurant.netlify.app/"><i class="bi bi-globe2"></i></a>
-                    <a href="https://github.com/ArmandoDevCom/Restaurant-app"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/ardu-dev/Restaurant-app"><i class="bi bi-github"></i></a>
                   </ul>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                   <p class="card-text">Proyecto E-commerce Basic: tienda en línea con React.js y Node.js. Explora, agrega al carrito y paga con seguridad vía PayPal.</p>
                   <ul>
                     <a href="https://ecommerce-basic-ad.netlify.app/"><i class="bi bi-globe2"></i></a>
-                    <a href="https://github.com/ArmandoDevCom/ecommerce_basic"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/ardu-dev/ecommerce_basic"><i class="bi bi-github"></i></a>
                   </ul>
                 </div>
             </div>
