--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/assets/images/favicon_armando.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Mi portafolio</title>
+    <title>Portafólio Ardudev</title>
 </head>
 <body>
     <main class="contenedor_main">
@@ -134,7 +134,7 @@
 
     <footer>
         <div class="contenedor_footer">
-            <p>&copy; 2024 Hugo Duran</p>
+            <p>&copy; 2024 Armando Duran</p>
         </div>
     </footer>
 
